<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/margin_15dp"
        android:background="@drawable/round_box"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20dp"
                android:fontFamily="@font/proxima"
                android:padding="@dimen/dimen_5dp"
                android:text="@string/new_update_available"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/proxima"
                android:padding="@dimen/margin_10"
                android:text="@string/fidoo_recommends_"
                android:textAlignment="center"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/text_size_12sp" />


            <View
                android:id="@+id/storeview_reviewOrd"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:background="@color/lightGray"
                android:backgroundTint="@color/background" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/latest_version_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/proxima"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_13sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/todo"
                android:src="@drawable/dot"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_width="@dimen/dimen_5dp"
                android:layout_height="@dimen/dimen_5dp"
                android:layout_gravity="center_vertical"
                app:tint="@color/colorTitle"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:fontFamily="@font/proxima"
                android:paddingRight="@dimen/margin_20dp"
                android:text="@string/fixed_a_bug_that_"
                android:textAlignment="textStart"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/text_size_12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/todo"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_width="@dimen/dimen_5dp"
                android:layout_height="@dimen/dimen_5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/dot"
                app:tint="@color/colorTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:fontFamily="@font/proxima"
                android:paddingEnd="@dimen/margin_20dp"
                android:text="@string/enchantments_to_make_the_fidoo_exp"
                android:textAlignment="textStart"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/text_size_12sp" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/updateversion_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:fontFamily="@font/proxima"
            android:padding="@dimen/margin_10"
            android:text="@string/update_now"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_14sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>