<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/productImg"
        android:layout_width="128dp"
        android:layout_height="93dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:shapeAppearanceOverlay="@style/RoundedSequare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_dolor"
       android:fontFamily="@font/proxima"
        android:layout_marginTop="5dp"
        android:layout_marginStart="2dp"
        android:textColor="@color/colorTitle"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/productImg"
        app:layout_constraintStart_toStartOf="@+id/productImg"
        app:layout_constraintTop_toBottomOf="@+id/productImg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="@+id/productName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productName">

        <ImageView
            android:id="@+id/locationImg"
            android:layout_width="9dp"
            android:layout_height="12dp"
            android:background="@drawable/location_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_2_km"
            android:fontFamily="@font/proxima"
            android:textColor="@color/colorTextGray"
            android:textSize="12sp"
            android:layout_marginStart="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/locationImg"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/min_Image"
            android:layout_width="9dp"
            android:layout_height="12dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/location_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_min"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <TextView
            android:fontFamily="@font/proxima"
            android:id="@+id/tv_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_30_min"
            android:textColor="@color/colorTextGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>